--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <div id="cabecalho">
       <h1 id="titulo">Welcome The Lessons Learned</h1>
     </div>
+    <img id="minha_foto" src="photos/mine.jpg" alt="My photo">
 </body>
 </html>
