create a list ordered

--- a/index.html
+++ b/index.html
@@ -11,5 +11,17 @@
       <h1 id="titulo">Welcome The Lessons Learned</h1>
     </div>
     <img id="minha_foto" src="photos/mine.jpg" alt="My photo">
+    <ol id="licoes_aprendidas">
+      <li>SELECTOR CLASS OR ID</li>
+      <li>BOX MODEL</li>
+      <li>HTML SEMANTIC</li>
+      <li>PSEUDO-CLASS</li>
+      <li>CSS DINAMIC</li>
+      <li>GIT</li>
+      <li>GITHUB</li>
+      <li>STRUCT PAGE</li>
+      <li>POSITIONING OF ELEMENTS</li>
+      <li>COMBINATIONS AND DESCENDING CLASS</li>
+    </ol>
 </body>
 </html>
