create a unordered list

--- a/index.html
+++ b/index.html
@@ -23,5 +23,17 @@
       <li>POSITIONING OF ELEMENTS</li>
       <li>COMBINATIONS AND DESCENDING CLASS</li>
     </ol>
+    <ul id="licoes_a_aprender">
+      <li>JAVASCRIPT</li>
+      <li>FRONT-END</li>
+      <li>BACK-END</li>
+      <li>DATA</li>
+      <li>NODE</li>
+      <li>PYTHON</li>
+      <li>REACT</li>
+      <li>MONGO DB</li>
+      <li>MANIPULATION OF DATA</li>
+      <li>DATA STORAGE</li>
+    </ul>
 </body>
 </html>
