--- a/index.html
+++ b/index.html
@@ -35,5 +35,8 @@
       <li>MANIPULATION OF DATA</li>
       <li>DATA STORAGE</li>
     </ul>
+    <footer id="rodape">
+      <P>made by Carlos Henrique</P>
+    </footer>
 </body>
 </html>
