add a link external

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       <li>MANIPULATION OF DATA</li>
       <li>DATA STORAGE</li>
     </ul>
+    <a href="https://developerscalambrine.github.io/" target="_blank">My Portfolio</a>
     <footer id="rodape">
       <P>made by Carlos Henrique</P>
     </footer>
