create an article about my knowledge

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
       <li>DATA STORAGE</li>
     </ul>
     <a href="https://developerscalambrine.github.io/" target="_blank">My Portfolio</a>
+    <article>
+      While working on this project, I learned how to use class and ID selectors to style elements, and how the box model affects layout and spacing. I discovered the importance of semantic HTML for better accessibility. I practiced using pseudo-classes and dynamic CSS to create interactive designs. I also learned the basics of Git and GitHub for version control, how to properly structure a web page, position elements effectively, and use selector combinations and descendant selectors for complex layouts.
+    </article>
     <footer id="rodape">
       <P>made by Carlos Henrique</P>
     </footer>
