checked the elements semantic contain in the site

--- a/index.html
+++ b/index.html
@@ -7,40 +7,47 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="cabecalho">
-      <h1 id="titulo">Welcome The Lessons Learned</h1>
-    </div>
-    <img id="minha_foto" src="photos/mine.jpg" alt="My photo">
-    <ol id="licoes_aprendidas">
-      <li>SELECTOR CLASS OR ID</li>
-      <li>BOX MODEL</li>
-      <li>HTML SEMANTIC</li>
-      <li>PSEUDO-CLASS</li>
-      <li>CSS DINAMIC</li>
-      <li>GIT</li>
-      <li>GITHUB</li>
-      <li>STRUCT PAGE</li>
-      <li>POSITIONING OF ELEMENTS</li>
-      <li>COMBINATIONS AND DESCENDING CLASS</li>
-    </ol>
-    <ul id="licoes_a_aprender">
-      <li>JAVASCRIPT</li>
-      <li>FRONT-END</li>
-      <li>BACK-END</li>
-      <li>DATA</li>
-      <li>NODE</li>
-      <li>PYTHON</li>
-      <li>REACT</li>
-      <li>MONGO DB</li>
-      <li>MANIPULATION OF DATA</li>
-      <li>DATA STORAGE</li>
-    </ul>
-    <a href="https://developerscalambrine.github.io/" target="_blank">My Portfolio</a>
-    <article>
-      While working on this project, I learned how to use class and ID selectors to style elements, and how the box model affects layout and spacing. I discovered the importance of semantic HTML for better accessibility. I practiced using pseudo-classes and dynamic CSS to create interactive designs. I also learned the basics of Git and GitHub for version control, how to properly structure a web page, position elements effectively, and use selector combinations and descendant selectors for complex layouts.
-    </article>
-    <footer id="rodape">
-      <P>made by Carlos Henrique</P>
-    </footer>
+  <nav id="main">
+    <header>
+      <div id="cabecalho">
+        <h1 id="titulo">Welcome The Lessons Learned</h1>
+      </div>
+    </header>
+      <img id="minha_foto" src="photos/mine.jpg" alt="My photo">
+      <ol id="licoes_aprendidas">
+        <li>SELECTOR CLASS OR ID</li>
+        <li>BOX MODEL</li>
+        <li>HTML SEMANTIC</li>
+        <li>PSEUDO-CLASS</li>
+        <li>CSS DINAMIC</li>
+        <li>GIT</li>
+        <li>GITHUB</li>
+        <li>STRUCT PAGE</li>
+        <li>POSITIONING OF ELEMENTS</li>
+        <li>COMBINATIONS AND DESCENDING CLASS</li>
+      </ol>
+      <ul id="licoes_a_aprender">
+        <li>JAVASCRIPT</li>
+        <li>FRONT-END</li>
+        <li>BACK-END</li>
+        <li>DATA</li>
+        <li>NODE</li>
+        <li>PYTHON</li>
+        <li>REACT</li>
+        <li>MONGO DB</li>
+        <li>MANIPULATION OF DATA</li>
+        <li>DATA STORAGE</li>
+      </ul>
+      <a href="https://developerscalambrine.github.io/" target="_blank">My Portfolio</a>
+      <article>
+        While working on this project, I learned how to use class and ID selectors to style elements, and how the box model affects layout and spacing. I discovered the importance of semantic HTML for better accessibility. I practiced using pseudo-classes and dynamic CSS to create interactive designs. I also learned the basics of Git and GitHub for version control, how to properly structure a web page, position elements effectively, and use selector combinations and descendant selectors for complex layouts.
+      </article>
+      <aside>
+        At first, I found web development intimidating. As I explored HTML, CSS, and Git, each step built my confidence. Now, coding feels less mysterious, and I’m excited to keep learning and applying new skills on real projects.
+      </aside>
+      <footer id="rodape">
+        <P>made by Carlos Henrique</P>
+      </footer>
+  </nav>
 </body>
 </html>
