add table with percent about languages used

--- a/index.html
+++ b/index.html
@@ -38,13 +38,43 @@
         <li>MANIPULATION OF DATA</li>
         <li>DATA STORAGE</li>
       </ul>
-      <a href="https://developerscalambrine.github.io/" target="_blank">My Portfolio</a>
+      <a href="https://developerscalambrine.github.io/" target="_blank"  rel="noopener noreferrer">My Portfolio</a>
       <article>
         While working on this project, I learned how to use class and ID selectors to style elements, and how the box model affects layout and spacing. I discovered the importance of semantic HTML for better accessibility. I practiced using pseudo-classes and dynamic CSS to create interactive designs. I also learned the basics of Git and GitHub for version control, how to properly structure a web page, position elements effectively, and use selector combinations and descendant selectors for complex layouts.
       </article>
       <aside>
         At first, I found web development intimidating. As I explored HTML, CSS, and Git, each step built my confidence. Now, coding feels less mysterious, and I’m excited to keep learning and applying new skills on real projects.
       </aside>
+      <table>
+        <thead>
+          <tr>
+            <th>Programming Language</th>
+            <th>User Percentage (%)</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>JavaScript</td>
+            <td>65</td>
+          </tr>
+          <tr>
+            <td>Python</td>
+            <td>50</td>
+          </tr>
+          <tr>
+            <td>Java</td>
+            <td>30</td>
+          </tr>
+          <tr>
+            <td>C#</td>
+            <td>20</td>
+          </tr>
+          <tr>
+            <td>HTML/CSS</td>
+            <td>80</td>
+          </tr>
+        </tbody>
+      </table>
       <footer id="rodape">
         <P>made by Carlos Henrique</P>
       </footer>
