--- a/index.html
+++ b/index.html
@@ -39,12 +39,14 @@
         <li>DATA STORAGE</li>
       </ul>
       <a href="https://developerscalambrine.github.io/" target="_blank"  rel="noopener noreferrer">My Portfolio</a>
-      <article>
-        While working on this project, I learned how to use class and ID selectors to style elements, and how the box model affects layout and spacing. I discovered the importance of semantic HTML for better accessibility. I practiced using pseudo-classes and dynamic CSS to create interactive designs. I also learned the basics of Git and GitHub for version control, how to properly structure a web page, position elements effectively, and use selector combinations and descendant selectors for complex layouts.
-      </article>
-      <aside>
-        At first, I found web development intimidating. As I explored HTML, CSS, and Git, each step built my confidence. Now, coding feels less mysterious, and I’m excited to keep learning and applying new skills on real projects.
-      </aside>
+      <div class="conteiner-lado-a-lado">
+        <article class="lado-esquerdo">
+          While working on this project, I learned how to use class and ID selectors to style elements, and how the box model affects layout and spacing. I discovered the importance of semantic HTML for better accessibility. I practiced using pseudo-classes and dynamic CSS to create interactive designs. I also learned the basics of Git and GitHub for version control, how to properly structure a web page, position elements effectively, and use selector combinations and descendant selectors for complex layouts.
+        </article>
+        <aside class="lado-direito">
+          At first, I found web development intimidating. As I explored HTML, CSS, and Git, each step built my confidence. Now, coding feels less mysterious, and I’m excited to keep learning and applying new skills on real projects.
+        </aside>
+    </div>
       <table>
         <thead>
           <tr>
